@@ -581,8 +581,7 @@ bfd_bwrite (ptr, size, abfd)
   if (nwrote != size)
     {
 #ifdef ENOSPC
-      if (nwrote >= 0)
-	errno = ENOSPC;
+      errno = ENOSPC;
 #endif
       bfd_set_error (bfd_error_system_call);
     }
@@ -869,14 +868,14 @@ DESCRIPTION
 .		 BFD_SEND(abfd, bfd_getx_signed_64, (ptr))
 .
 .#define bfd_get(bits, abfd, ptr)				\
-.                ((bits) == 8 ? bfd_get_8 (abfd, ptr)		\
+.                ( (bits) ==  8 ? (bfd_vma) bfd_get_8 (abfd, ptr)	\
 .		 : (bits) == 16 ? bfd_get_16 (abfd, ptr)	\
 .		 : (bits) == 32 ? bfd_get_32 (abfd, ptr)	\
 .		 : (bits) == 64 ? bfd_get_64 (abfd, ptr)	\
 .		 : (abort (), (bfd_vma) - 1))
 .
 .#define bfd_put(bits, abfd, val, ptr)				\
-.                ((bits) == 8 ? bfd_put_8 (abfd, val, ptr)	\
+.                ( (bits) ==  8 ? bfd_put_8  (abfd, val, ptr)	\
 .		 : (bits) == 16 ? bfd_put_16 (abfd, val, ptr)	\
 .		 : (bits) == 32 ? bfd_put_32 (abfd, val, ptr)	\
 .		 : (bits) == 64 ? bfd_put_64 (abfd, val, ptr)	\
