@@ -1,3 +1,14 @@
+2001-09-21  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* elfxx-ia64.c: Fix compile time warning messages.
+	* bfd/coff-mcore.c: Fix compile time warning messages.
+	* bfd/coff-ppc.c: Fix compile time warning messages.
+	* bfd/coffcode.h: Fix compile time warning messages.
+	* bfd/elf32-mips.c: Fix compile time warning messages.
+	* bfd/elf64-alpha.c: Fix compile time warning messages.
+	* bfd/libbfd.c: Fix compile time warning messages.
+	* bfd/bfd-in2.h: Regenerate.
+
 2001-09-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* Makefile.am: Run "make dep-am".
